--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
 
     
-
+    <div var="car">
     <label for="cars">Selecione su Jugada:</label>
-
     <select name="jugar" id="jugar">
         <option value="piedra">Piedra</option>
         <option value="papel">Papel</option>
         <option value="tijera">Tijera</option>
     </select>
+    </div>
    
     <button  onclick="juagar()">Juagar</button>
 
